force-app/main/default/objects/Project_Snapshot__c/Project_Snapshot__c.object-meta.xml
<CustomObject>
    <description>Force.com Labs - PM - Tracks daily information about active projects.</description>
    <label>Project Snapshot</label>
    <language>en_US</language>
    <nameField>
        <displayFormat>PS{000000}</displayFormat>
        <label>Project Snapshot Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Snapshots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>