force-app/main/default/objects/Project_Snapshot__c/fields/Blocked_Task_Count__c.field-meta.xml
<CustomField>
    <fullName>Blocked_Task_Count__c</fullName>
    <label>Blocked Task Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>