force-app/main/default/objects/Project_Snapshot__c/fields/Complete_Task_Count__c.field-meta.xml
<CustomField>
    <fullName>Complete_Task_Count__c</fullName>
    <label>Complete Task Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>