force-app/main/default/objects/Project_Snapshot__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <label>Date</label>
    <type>DateTime</type>
</CustomField>