force-app/main/default/objects/Project_Snapshot__c/fields/Expense_Estimate__c.field-meta.xml
<CustomField>
    <fullName>Expense_Estimate__c</fullName>
    <label>Expense Estimate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>