force-app/main/default/objects/Project_Snapshot__c/fields/Expense_Incurred__c.field-meta.xml
<CustomField>
    <fullName>Expense_Incurred__c</fullName>
    <label>Expense Incurred</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>