force-app/main/default/objects/Project_Snapshot__c/fields/Hours_Budget__c.field-meta.xml
<CustomField>
    <fullName>Hours_Budget__c</fullName>
    <label>Hours Budget</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>