force-app/main/default/objects/Project_Snapshot__c/fields/Hours_Incurred__c.field-meta.xml
<CustomField>
    <fullName>Hours_Incurred__c</fullName>
    <label>Hours Incurred</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>