force-app/main/default/objects/Project_Snapshot__c/fields/Incomplete_Top_Milestones__c.field-meta.xml
<CustomField>
    <fullName>Incomplete_Top_Milestones__c</fullName>
    <label>Incomplete Top Milestones</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>